# prometheos-lite

./: .gitignore  AGENTS.md  ARCHITECTURE_UPGRADE_PLAN.md  CANGELOG.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  OVERVIEW V1.1.md  OVERVIEW V1.md  OVERVIEW.md  PROJECT.md  README.md  check_output.txt  clippy.toml  compile_errors.txt  current_errors.txt  final_errors.txt  handoff.md  passthrough_flow.json  plan_input.json  prometheos.config.json  reframing)  request.json  self_improvement_flow.json  test_input.json  write_plan.flow.json  zero_errors.txt
.cargo/: config.toml
.cursor/rules/: repository-organization.mdc
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  task.yml
.github/workflows/: ci.yml  frontend-ci.yml  install-smoke.yml  prometheos-reviewonly.yml  repo-workbench-golden-path.yml
.prometheos/: FLOWS.md  MEMORY.md  SKILLS.md  SOUL.md  TOOLS.md
benchmarks/: codegen.flow.yaml  direct-chat.flow.yaml  planning.flow.yaml
docs/: LOOP_ENGINEERING.md  README.md  V1.6_COMPILE_FIXES.md  flows-yaml.md  harness-api-cli.md  harness-benchmarking.md  harness-evidence-completion.md  harness-execution-flow.md  harness-patch-protocol.md  harness-sandboxing.md  personality-v1.md  prd-harness-completion-audit.md  runtime-context.md  tool-permissions.md  tracing-and-replay.md  v1-core.md  v1.2-operation.md  v1.6-harness-engine.md  v1.6-implementation-plan.md
docs/api/: harness-spine.md
docs/architecture/: README.md  harness-spine.md
docs/demo/: repo-workbench-transcript.md
docs/guides/: README.md  frontend-alpha-status.md  frontend-api-compatibility-plan.md  frontend-smoke-strategy.md  how-flows-work.md  install.md  local-frontend-demo.md  local-model-compatibility.md  ollama-ornith-compatibility.md  ornith-manual-validation.md  product-surface-inventory.md  prometheos-reviewonly-github-flow.md  provider-configuration.md  repo-workbench-mvp.md  safely-fix-a-real-bug.md  serve-api-status.md  workcontext-guide.md  zero-to-first-value.md
docs/operations/: async-db-migration-issue.md  project-management.md
docs/prd/: prometheos-lite-V1.3-playbook.md  prometheos-lite-V1.4-hands.md  prometheos-lite-V1.5-context.md  prometheos-lite-V1.6.1-harness-alignment-F.md  prometheos-lite-mvp.md  (+16 more)
examples/: README.md  codegen.flow.json
flows/: approval.flow.yaml  chat.flow.yaml  code-generation.json  codegen.flow.yaml  memory-augmented.json  planning.flow.yaml  software_dev.yaml  tool-execution.json
frontend/: components.json  package-lock.json  package.json  postcss.config.js  tailwind.config.ts
logs/: check2.txt  check_output.txt  compile_errors.txt  errors.txt  errors2.txt  errors3.txt  last_errors.txt  latest_errors.txt  new_errors.txt  remaining_errors.txt  updated_errors.txt
scripts/: approval-controlled-patch-smoke.sh  fullstack-smoke.sh  provider-governed-proposal-smoke.sh  sync-prd-issues-to-project.ps1
src/: lib.rs  main.rs  repo_workbench.rs  runtime_policy.rs
templates/: business.yaml  marketing.yaml  software.yaml
test_embedding_provider/: Cargo.toml
tests/: api_flow_execution.rs  api_frontend_compatibility.rs  api_orchestrator_integration.rs  api_server_smoke.rs  api_tests.rs  ci_enforcement_tests.rs  codegen_flow_test.rs  completion_invariant_tests.rs  e2e_harness_test.rs  golden_harness_safety_tests.rs  golden_path_integration.rs  guardrail_integration_tests.rs  guardrail_tests.rs  harness_acceptance.rs  harness_adversarial_validation.rs  harness_artifacts.rs  harness_benchmark.rs  harness_completion.rs  harness_confidence.rs  harness_edit_protocol.rs  harness_environment.rs  harness_execution_loop.rs  harness_failure.rs  harness_file_control.rs  harness_git_checkpoint.rs  harness_golden_paths.rs  harness_integration_e2e.rs  harness_minimality.rs  harness_model_strategy.rs  harness_observability.rs  harness_patch_applier.rs  harness_permissions.rs  harness_regression_memory.rs  harness_repair_loop.rs  harness_repo_intelligence.rs  harness_reproduction.rs  harness_review.rs  harness_risk.rs  harness_runtime_tools.rs  harness_sandbox.rs  (+30 more)
(+383 files in other folders)
