[package]
name = "prometheos-lite"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
futures-util = "0.3"
md5 = "0.7"
opentelemetry = { version = "0.23", features = ["trace"] }
opentelemetry-otlp = { version = "0.16", features = ["trace"] }
opentelemetry-semantic-conventions = "0.15"
opentelemetry-stdout = { version = "0.4", features = ["trace"] }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
rand = "0.8"
regex = "1.10"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
axum-test = "15.0"

[features]
default = []
legacy = []  # Enable legacy agent/core modules for backward compatibility
