[package]
name = "prometheos-lite"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5"
flate2 = "1.0"
brotli = "7"
zstd = "0.13"
lazy_static = "1.4"
# Tree-sitter for AST-based code analysis
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
toml = "0.8"
futures = "0.3"
futures-util = "0.3"
md5 = "0.7"
once_cell = "1.19"
opentelemetry = { version = "0.23", features = ["trace"] }
opentelemetry-otlp = { version = "0.16", features = ["trace"] }
opentelemetry-semantic-conventions = "0.15"
opentelemetry-stdout = { version = "0.4", features = ["trace"] }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
rand = "0.8"
regex = "1.10"
sysinfo = "0.30"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
serde_yaml = "0.9"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
diffy = "0.4"
git2 = "0.20"
ignore = "0.4"
tracing-opentelemetry = "0.24"
tiktoken-rs = "0.5"
walkdir = "2.5"
dotenv = "0.15"

[dev-dependencies]
tempfile = "3"
axum-test = "15.0"

[features]
default = []
legacy = []  # Enable legacy agent/core modules for backward compatibility

[profile.test]
debug = 0
split-debuginfo = "off"
incremental = true


